[tool.poetry]
name = "slowreverb-bot"
version = "0.1.0"
description = ""
authors = ["JimmyShi1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
google-api-python-client = "^2.1.0"
youtube-dl = "^2021.4.7"
pydub = "^0.25.1"
pysndfx = "^0.3.6"
sox = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
